@@ -18,6 +18,7 @@
 	- fix: don't set handler if SIG_IGN is already set (#134474).
 	- disable expensive header+payload verifies in default config.
 	- adjust digest/signature stats to count #pkgs and bytes.
+	- obsolete Serial:, Copyright:, and RHNPlatform: syntax in spec files.
 
 4.3.1 -> 4.3.2:
 	- use /etc/selinux/targeted/contexts/files/file_contexts for now.
